use transparent logo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   </head>
   <body>
-    <img src="midmkt.png" alt="" />
+    <img src="midmkt_transparent.png" alt="" />
     <h1>We make amazing things.</h1>
     <h1>(More on that soon.)  </h1>
   </body>
