Brief copy changes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
   </head>
   <body>
     <img src="midmkt_transparent.png" alt="" />
-    <h1>We make amazing things.</h1>
-    <h1>(More on that soon.)  </h1>
+    <h1>A design and development studio based in <current weather> San Francisco.</h1>
+    <p>We build beautiful things for the web. Our team includes illustrators, UI/UX designers and experienced full stack developers.</p>
+    <p>Currently accepting clients. Inquire within.</p>
   </body>
 </html>
