new logo from Ainsley

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   </head>
   <body>
-    <img src="midmkt_transparent.png" alt="" />
+    <img src="MIDMKT-logo-white.png" alt="" />
     <h1>A design and development studio based in <current weather> San Francisco.</h1>
     <p>We build beautiful things for the web. Our team includes illustrators, UI/UX designers and experienced full stack developers.</p>
     <p>Currently accepting clients. Inquire within.</p>
