new background pattern from Ainsley

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       body {
         margin: 0;
         padding: 0;
-        background-color: #f3f50b;
+        background-color: #4CACDF;
+        background-image: url("MIDMKT-pattern-bg.png");
         width: 100%;
       }
       img {
