make weather text italic
I feel like the fact that it says "partly" cloudy (for example) is less weird if it is more obvious that there is something special (perhaps, automated) about that text.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
           font-style: normal;
       }
 
+      #weather {
+        font-style: italic;
+      }
       #weather i {
         color: #fff;
         font-family: weather;
