simple version of call to action
- email with underline

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
           font-size: 90%;
         }
       }
+      p.inquire {
+        margin-top: 1.75em; /* bit less than 2em to offset extra visual space created by ascenders, decenders */
+      }
+      .inquire a {
+        color: white;
+        text-decoration: none;
+        border-bottom: 1px white dotted;
+      }
+      .inquire a:hover, .inquire a:focus {
+        text-decoration: none;
+        border-bottom-style: solid;
+      }
     </style>
 
   </head>
@@ -59,6 +71,7 @@
     <div class="content">
       <h1>A design and development studio based in <current weather> San Francisco.</h1>
       <p>We build beautiful things for the web. Our team includes illustrators, UI/UX designers and experienced full stack developers.</p>
+      <p class="inquire">Currently accepting clients. <a href="mailto:hello@midmkt.co?subject=Hello MIDMKT!">Inquire within.</a></p>
     </div>
 
   </body>
