A bolder version of the call to action
- 4px underline on the link, and on hover the link text color swaps (with .33 second transition) from white to the background blue while the background swaps from blue to white.

- this is a lot less subtle, but perhaps we’re going for that

--- a/index.html
+++ b/index.html
@@ -56,11 +56,19 @@
       .inquire a {
         color: white;
         text-decoration: none;
-        border-bottom: 1px white dotted;
+        border-bottom: 4px white solid;
+        padding: .25em;
+
+        -webkit-transition: all .33s ease;
+        -moz-transition: all .33s ease;
+        -ms-transition: all .33s ease;
+        -o-transition: all .33s ease;
+        transition: all .33s ease;
       }
       .inquire a:hover, .inquire a:focus {
         text-decoration: none;
-        border-bottom-style: solid;
+        background: white;
+        color: #4CACDF; /* match background */
       }
     </style>
 
