Change link style

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         margin-top: 1.75em; /* bit less than 2em to offset extra visual space created by ascenders, decenders */
       }
       .inquire a {
+        border-bottom: 1px solid white;
         color: white;
+        padding-bottom: 0.15em;
         text-decoration: none;
-        border-bottom: 4px white solid;
-        padding: .25em;
 
         -webkit-transition: all .33s ease;
         -moz-transition: all .33s ease;
@@ -66,9 +66,8 @@
         transition: all .33s ease;
       }
       .inquire a:hover, .inquire a:focus {
+        opacity: 0.7;
         text-decoration: none;
-        background: white;
-        color: #4CACDF; /* match background */
       }
     </style>
 
