Change call to action link style to dashed/solid

--- a/index.html
+++ b/index.html
@@ -54,19 +54,13 @@
         margin-top: 1.75em; /* bit less than 2em to offset extra visual space created by ascenders, decenders */
       }
       .inquire a {
-        border-bottom: 1px solid white;
+        border-bottom: 1px dashed white;
         color: white;
         padding-bottom: 0.15em;
         text-decoration: none;
-
-        -webkit-transition: all .33s ease;
-        -moz-transition: all .33s ease;
-        -ms-transition: all .33s ease;
-        -o-transition: all .33s ease;
-        transition: all .33s ease;
       }
       .inquire a:hover, .inquire a:focus {
-        opacity: 0.7;
+        border-bottom-style: solid;
         text-decoration: none;
       }
     </style>
