Lighten dashed underline on normal state

--- a/index.html
+++ b/index.html
@@ -54,13 +54,19 @@
         margin-top: 1.75em; /* bit less than 2em to offset extra visual space created by ascenders, decenders */
       }
       .inquire a {
-        border-bottom: 1px dashed white;
+        border-bottom: 1px dashed rgba(255, 255, 255, 0.6);
         color: white;
         padding-bottom: 0.15em;
         text-decoration: none;
+
+        -webkit-transition: all .33s ease;
+        -moz-transition: all .33s ease;
+        -ms-transition: all .33s ease;
+        -o-transition: all .33s ease;
+        transition: all .33s ease;
       }
       .inquire a:hover, .inquire a:focus {
-        border-bottom-style: solid;
+        border-bottom: 1px solid #fff;
         text-decoration: none;
       }
     </style>
