Add adjectives for default weather codes

--- a/index.html
+++ b/index.html
@@ -97,54 +97,54 @@
     // from https://developer.yahoo.com/weather/documentation.html#codes
     // code + description are from yahoo's API; wi (weather-icon) is what we're using to represent the description
     var codes = [
-      {code: 0  , description: "tornado", wi: "tornado"},
-      {code: 1  , description: "tropical storm", wi: "night-thunderstorm" },
-      {code: 2  , description: "hurricane", wi: "hurricane" },
-      {code: 3  , description: "severe thunderstorms", wi: "thunderstorm" },
-      {code: 4  , description: "thunderstorms", wi: "storm-showers" },
-      {code: 5  , description: "mixed rain and snow", wi: "snow" },
-      {code: 6  , description: "mixed rain and sleet", wi: "sleet" },
-      {code: 7  , description: "mixed snow and sleet", wi: "sleet" },
-      {code: 8  , description: "freezing drizzle", wi: "sleet" },
-      {code: 9  , description: "drizzle", wi: "sprinkle" },
-      {code: 10 , description: "freezing rain", wi: "sleet" },
-      {code: 11 , description: "showers", wi: "showers" },
-      {code: 12 , description: "showers", wi: "showers" },
-      {code: 13 , description: "snow flurries", wi: "snow" },
-      {code: 14 , description: "light snow showers", wi: "snow" },
-      {code: 15 , description: "blowing snow", wi: "snow-wind" },
-      {code: 16 , description: "snow", wi: "snow" },
-      {code: 17 , description: "hail", wi: "hail" },
-      {code: 18 , description: "sleet", wi: "sleet" },
-      {code: 19 , description: "dust", wi: "dust" },
-      {code: 20 , description: "foggy", wi: "fog" },
-      {code: 21 , description: "haze", wi: "day-haze" },
-      {code: 22 , description: "smoky", wi: "smoke" },
-      {code: 23 , description: "blustery", wi: "beafort-5" /* not exact: Beafort 5 is 17-21 knots; blustery is 15-25 mph or 13-21 knots */ },
-      {code: 24 , description: "windy", wi: "beafort-6" /* not exact:  B6 is 22-27 knots; NOAA defines windy as 20-30mph, or 17-26 knots */},
-      {code: 25 , description: "cold", wi: "snowflake-cold" },
-      {code: 26 , description: "cloudy", wi: "cloudy" },
-      {code: 27 , description: "mostly cloudy (night)", wi: "night-cloudy" },
-      {code: 28 , description: "mostly cloudy (day)", wi: "day-cloudy" },
-      {code: 29 , description: "partly cloudy (night)", wi: "night-partly-cloudy" },
-      {code: 30 , description: "partly cloudy (day)", wi: "day-sunny-overcast" },
-      {code: 31 , description: "clear (night)", wi: "night-clear" },
-      {code: 32 , description: "sunny", wi: "day-sunny" },
-      {code: 33 , description: "fair (night)", wi: "night-clear" },
-      {code: 34 , description: "fair (day)", wi: "day-sunny" },
-      {code: 35 , description: "mixed rain and hail", wi: "hail" },
-      {code: 36 , description: "hot", wi: "hot" },
-      {code: 37 , description: "isolated thunderstorms", wi: "storm-showers" },
-      {code: 38 , description: "scattered thunderstorms", wi: "storm-showers" },
-      {code: 39 , description: "scattered thunderstorms", wi: "storm-showers" },
-      {code: 40 , description: "scattered showers", wi: "showers" },
-      {code: 41 , description: "heavy snow", wi: "snow" },
-      {code: 42 , description: "scattered snow showers", wi: "snow" },
-      {code: 43 , description: "heavy snow", wi: "snow" },
-      {code: 44 , description: "partly cloudy", wi: "night-cloudy" },
-      {code: 45 , description: "thundershowers", wi: "storm-showers" },
-      {code: 46 , description: "snow showers", wi: "snow" },
-      {code: 47 , description: "isolated thundershowers", wi: "storm-showers" }
+      {code: 0  , description: "tornado", adjective: 'blustery', wi: "tornado"},
+      {code: 1  , description: "tropical storm", adjective: 'stormy', wi: "night-thunderstorm" },
+      {code: 2  , description: "hurricane", adjective: 'windswept', wi: "hurricane" },
+      {code: 3  , description: "severe thunderstorms", adjective: 'stormy', wi: "thunderstorm" },
+      {code: 4  , description: "thunderstorms", adjective: 'stormy', wi: "storm-showers" },
+      {code: 5  , description: "mixed rain and snow", adjective: 'wintry', wi: "snow" },
+      {code: 6  , description: "mixed rain and sleet", adjective: 'wintry', wi: "sleet" },
+      {code: 7  , description: "mixed snow and sleet", adjective: 'wintry', wi: "sleet" },
+      {code: 8  , description: "freezing drizzle", adjective: 'drizzly', wi: "sleet" },
+      {code: 9  , description: "drizzle", adjective: 'drizzly', wi: "sprinkle" },
+      {code: 10 , description: "freezing rain", adjective: 'rainy', wi: "sleet" },
+      {code: 11 , description: "showers", adjective: 'rainy', wi: "showers" },
+      {code: 12 , description: "showers", adjective: 'rainy', wi: "showers" },
+      {code: 13 , description: "snow flurries", adjective: 'snowy', wi: "snow" },
+      {code: 14 , description: "light snow showers", adjective: 'snowy', wi: "snow" },
+      {code: 15 , description: "blowing snow", adjective: 'snowy', wi: "snow-wind" },
+      {code: 16 , description: "snow", adjective: 'snowy', wi: "snow" },
+      {code: 17 , description: "hail", adjective: 'rainy', wi: "hail" },
+      {code: 18 , description: "sleet", adjective: 'rainy', wi: "sleet" },
+      {code: 19 , description: "dust", adjective: 'dusty', wi: "dust" },
+      {code: 20 , description: "foggy", adjective: 'foggy', wi: "fog" },
+      {code: 21 , description: "haze", adjective: 'hazey', wi: "day-haze" },
+      {code: 22 , description: "smoky", adjective: 'smoky', wi: "smoke" },
+      {code: 23 , description: "blustery", adjective: 'blustery', wi: "beafort-5" /* not exact: Beafort 5 is 17-21 knots; blustery is 15-25 mph or 13-21 knots */ },
+      {code: 24 , description: "windy", adjective: 'windy', wi: "beafort-6" /* not exact:  B6 is 22-27 knots; NOAA defines windy as 20-30mph, or 17-26 knots */},
+      {code: 25 , description: "cold", adjective: 'chilly', wi: "snowflake-cold" },
+      {code: 26 , description: "cloudy", adjective: 'cloudy', wi: "cloudy" },
+      {code: 27 , description: "mostly cloudy (night)", adjective: 'cloudy', wi: "night-cloudy" },
+      {code: 28 , description: "mostly cloudy (day)", adjective: 'cloudy', wi: "day-cloudy" },
+      {code: 29 , description: "partly cloudy (night)", adjective: 'cloudy', wi: "night-partly-cloudy" },
+      {code: 30 , description: "partly cloudy (day)", adjective: 'cloudy', wi: "day-sunny-overcast" },
+      {code: 31 , description: "clear (night)", adjective: 'peaceful', wi: "night-clear" },
+      {code: 32 , description: "sunny", adjective: 'sunny', wi: "day-sunny" },
+      {code: 33 , description: "fair (night)", adjective: 'beautiful', wi: "night-clear" },
+      {code: 34 , description: "fair (day)", adjective: 'beautiful', wi: "day-sunny" },
+      {code: 35 , description: "mixed rain and hail", adjective: 'rainy', wi: "hail" },
+      {code: 36 , description: "hot", adjective: 'sweltering', wi: "hot" },
+      {code: 37 , description: "isolated thunderstorms", adjective: 'stormy', wi: "storm-showers" },
+      {code: 38 , description: "scattered thunderstorms", adjective: 'stormy', wi: "storm-showers" },
+      {code: 39 , description: "scattered thunderstorms", adjective: 'stormy', wi: "storm-showers" },
+      {code: 40 , description: "scattered showers", adjective: 'stormy', wi: "showers" },
+      {code: 41 , description: "heavy snow", adjective: 'snowy', wi: "snow" },
+      {code: 42 , description: "scattered snow showers", adjective: 'stormy', wi: "snow" },
+      {code: 43 , description: "heavy snow", adjective: 'snowy', wi: "snow" },
+      {code: 44 , description: "partly cloudy", adjective: 'cloudy', wi: "night-cloudy" },
+      {code: 45 , description: "thundershowers", adjective: 'stormy',  wi: "storm-showers" },
+      {code: 46 , description: "snow showers", adjective: 'snowy', wi: "snow" },
+      {code: 47 , description: "isolated thundershowers", adjective: 'stormy', wi: "storm-showers" }
     ];
 
   $(document).ready(function() {
