--- a/index.html
+++ b/index.html
@@ -96,25 +96,25 @@
     // from https://developer.yahoo.com/weather/documentation.html#codes
     // code + description are from yahoo's API; wi (weather-icon) is what we're using to represent the description
     var codes = [
-      {code: 0  , description: "tornado", adjective: 'blustery', wi: "tornado"},
-      {code: 1  , description: "tropical storm", adjective: 'stormy', wi: "night-thunderstorm" },
-      {code: 2  , description: "hurricane", adjective: 'windswept', wi: "hurricane" },
-      {code: 3  , description: "severe thunderstorms", adjective: 'stormy', wi: "thunderstorm" },
+      {code: 0  , description: "tornado", adjective: 'tornado-stricken', wi: "tornado"},
+      {code: 1  , description: "tropical storm", adjective: 'tropically stormy', wi: "night-thunderstorm" },
+      {code: 2  , description: "hurricane", adjective: 'hurricane-inflicted', wi: "hurricane" },
+      {code: 3  , description: "severe thunderstorms", adjective: 'severely stormy', wi: "thunderstorm" },
       {code: 4  , description: "thunderstorms", adjective: 'stormy', wi: "storm-showers" },
       {code: 5  , description: "mixed rain and snow", adjective: 'wintry', wi: "snow" },
-      {code: 6  , description: "mixed rain and sleet", adjective: 'wintry', wi: "sleet" },
-      {code: 7  , description: "mixed snow and sleet", adjective: 'wintry', wi: "sleet" },
-      {code: 8  , description: "freezing drizzle", adjective: 'drizzly', wi: "sleet" },
+      {code: 6  , description: "mixed rain and sleet", adjective: 'sleet-filled', wi: "sleet" },
+      {code: 7  , description: "mixed snow and sleet", adjective: 'sleet-covered', wi: "sleet" },
+      {code: 8  , description: "freezing drizzle", adjective: 'bitterly drizzly', wi: "sleet" },
       {code: 9  , description: "drizzle", adjective: 'drizzly', wi: "sprinkle" },
-      {code: 10 , description: "freezing rain", adjective: 'rainy', wi: "sleet" },
+      {code: 10 , description: "freezing rain", adjective: 'frigidly rainy', wi: "sleet" },
       {code: 11 , description: "showers", adjective: 'rainy', wi: "showers" },
       {code: 12 , description: "showers", adjective: 'rainy', wi: "showers" },
       {code: 13 , description: "snow flurries", adjective: 'snowy', wi: "snow" },
-      {code: 14 , description: "light snow showers", adjective: 'snowy', wi: "snow" },
+      {code: 14 , description: "light snow showers", adjective: 'lightly snowy', wi: "snow" },
       {code: 15 , description: "blowing snow", adjective: 'snowy', wi: "snow-wind" },
       {code: 16 , description: "snow", adjective: 'snowy', wi: "snow" },
-      {code: 17 , description: "hail", adjective: 'rainy', wi: "hail" },
-      {code: 18 , description: "sleet", adjective: 'rainy', wi: "sleet" },
+      {code: 17 , description: "hail", adjective: 'hail-striken', wi: "hail" },
+      {code: 18 , description: "sleet", adjective: 'sleet-suffering', wi: "sleet" },
       {code: 19 , description: "dust", adjective: 'dusty', wi: "dust" },
       {code: 20 , description: "foggy", adjective: 'foggy', wi: "fog" },
       {code: 21 , description: "haze", adjective: 'hazey', wi: "day-haze" },
@@ -126,7 +126,7 @@
       {code: 27 , description: "mostly cloudy (night)", adjective: 'cloudy', wi: "night-cloudy" },
       {code: 28 , description: "mostly cloudy (day)", adjective: 'cloudy', wi: "day-cloudy" },
       {code: 29 , description: "partly cloudy (night)", adjective: 'cloudy', wi: "night-partly-cloudy" },
-      {code: 30 , description: "partly cloudy (day)", adjective: 'cloudy', wi: "day-sunny-overcast" },
+      {code: 30 , description: "partly cloudy (day)", adjective: 'almost sunny', wi: "day-sunny-overcast" },
       {code: 31 , description: "clear (night)", adjective: 'peaceful', wi: "night-clear" },
       {code: 32 , description: "sunny", adjective: 'sunny', wi: "day-sunny" },
       {code: 33 , description: "fair (night)", adjective: 'beautiful', wi: "night-clear" },
