--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
         text-decoration: none;
       }
 
+      #weather {
+        display: none;
+      }
+
+      html.js #weather {
+        display: inline-block;
+        -webkit-transition: all 0.25s ease-in;
+        -moz-transition: all 0.25s ease-in;
+        -ms-transition: all 0.25s ease-in;
+        -o-transition: all 0.25s ease-in;
+        transition: all 0.25s ease-in;
+        min-width: 100px;
+      }
+
       #weather-text {
         font-style: italic;
       }
@@ -77,6 +91,12 @@
         font-size: 0.8em; /* 16px (icon height should match font x-height) */
       }
 
+      .shrunk {
+        -webkit-transform: scale(0);
+        -ms-transform: scale(0);
+        transform: scale(0);
+      }
+
     </style>
 
   </head>
@@ -84,7 +104,7 @@
     <img src="MIDMKT-logo-white.png" alt="" />
 
     <div class="content">
-      <h1>A design and development studio in <span id="weather" style="display:none;"></span> San Francisco.</h1>
+      <h1>A design and development studio in <div class="shrunk" id="weather"></div> San Francisco.</h1>
       <p>We build beautiful things for the web. Our team includes illustrators, UI/UX designers and experienced full stack developers.</p>
       <p class="inquire">Currently accepting clients. <a href="mailto:hello@midmkt.co?subject=Hello MIDMKT!">Inquire within.</a></p>
     </div>
@@ -153,11 +173,14 @@
             var icon = '<i class="wi wi-'+weather.wi+'"></i>';
             $("#weather").html(condition+' '+icon);
             $("#weather").fadeIn('fast');
+            $("#weather").toggleClass("shrunk");
+            $("#weather").css("min-width", "0");
         } else {
             console.log('Failed. Expected weatherCode to be a number. It isn\`t.');
         }
     }
 
+    document.getElementsByTagName('html')[0].className += ' js';
     $(document).ready(function() {
         var weatherURL = "https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20weather.forecast%20where%20woeid%20in%20(select%20woeid%20from%20geo.places(1)%20where%20text%3D%22san%20francisco%20%2C%20ca%22)&format=json&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys";
         var getWeather = $.getJSON( weatherURL, function(data) {
