--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
       }
 
     </style>
+    <script>
+        document.getElementsByTagName('html')[0].className += ' js';
+    </script>
 
   </head>
   <body>
@@ -181,7 +184,6 @@
         }
     }
 
-    document.getElementsByTagName('html')[0].className += ' js';
     $(document).ready(function() {
         var weatherURL = "https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20weather.forecast%20where%20woeid%20in%20(select%20woeid%20from%20geo.places(1)%20where%20text%3D%22san%20francisco%20%2C%20ca%22)&format=json&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys";
         var getWeather = $.getJSON( weatherURL, function(data) {
