Trick browser to fetch font as soon as possible
- the browser think we need the font immediately, so it begins fetching it; previously, we didn’t attempt to fetch it until after we grabbed the weather data. So now fetching font starts at/before the time the weather data is fetched and they happen in parallel.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
         min-width: 25px;
       }
 
+      .hide {
+         position: absolute !important;
+         top: -9999px !important;
+         left: -9999px !important;
+      }
+
     </style>
     <script>
         document.getElementsByTagName('html')[0].className += ' js';
@@ -99,6 +105,9 @@
   </head>
   <body>
     <img src="MIDMKT-logo-white.png" alt="" />
+    <div class="font_preload hide">
+      <i class="wi wi-fog"></i>
+    </div>
 
     <div class="content">
       <h1>A design and development studio in <span id="weather"></span> San Francisco.</h1>
